fixed aligning of input in #analytics form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -637,6 +637,7 @@ footer.center {
 
 #nOfDays {
 	width:40px;
+	text-align:center;
 }
 
 /* rest of reset */
